@@ -1,3 +1,9 @@
+2003-05-07  Ettore Perazzoli  <ettore@ximian.com>
+
+	* e-shell-folder-commands.c (e_shell_command_add_to_shortcut_bar):
+	Do use the supplied folder_path to determine the unread count, if
+	not NULL.  [#42465]
+
 2003-05-07  JP Rosevear  <jpr@ximian.com>
 
 	* e-shell-folder-commands.c (delete_dialog): don't pass
